syntax = "proto3"; /* default is proto2 */
option java_package = "proto";
service Calculator {
  rpc CalculateInts (CalculateRequest) returns (CalculateReply) {}
}

message CalculateRequest {
  int64 firstInt = 1;
  int64 secondInt = 2;
  string operation = 3;
}

message CalculateReply {
  string message = 1;
  int64 result = 2;
}